# cpp-sandbox

./: .gitignore  CMakeLists.txt  MIT LICENSE.txt  README.md  fs_alloc.hpp  main.cpp
deprecated/: fwd_list.hpp  old_slot_array.hpp  tests_transactional_map.cpp
include/: aligned_array.hpp  arc_garbage_collector.hpp  block_allocator.hpp  bytes_literals.hpp  bytes_units.hpp  compact_map.hpp  compiler_hints.hpp  eval.hpp  fast_optional.hpp  flag_enums.hpp  fluent_collections.hpp  fwd_list.hpp  lazy_ranges.hpp  logger.hpp  make_string.hpp  monad.hpp  movable_function.hpp  mpsc_queue.hpp  optional.hpp  pod_vector.hpp  pointer_iterators.hpp  serializer_span.hpp  serializer_span2.hpp  slot_map.hpp  spsc_queue.hpp  stack_allocator.hpp  stack_array.hpp  stack_tracker.hpp  terminal.hpp  thread_pool.hpp  transactional.hpp  transactional_map.hpp  type_traits.hpp  utils.hpp
include/udp/: listener.hpp  packet.hpp  sender.hpp  traits.hpp
src/: eval.cpp  stack_tracker.cpp  terminal.cpp  thread_pool.cpp
tests/: test_mpsc_queue.cpp  tests_arc_garbage_collector.cpp  tests_block_allocator.cpp  tests_compact_map.cpp  tests_compiler_hints.cpp  tests_eval.cpp  tests_fast_optional.cpp  tests_flag_enums.cpp  tests_fluent_collections.cpp  tests_fwd_list.cpp  tests_lazy_ranges.cpp  tests_make_string.cpp  tests_monad.cpp  tests_movable_function.cpp  tests_mpsc_queue.cpp  tests_optional.cpp  tests_performances.cpp  tests_pod_vector.cpp  tests_serializer_span.cpp  tests_serializer_span2.cpp  tests_slot_map.cpp  tests_spsc_queue.cpp  tests_stack_allocator.cpp  tests_stack_array.cpp  tests_stack_tracker.cpp  tests_thread_pool.cpp  tests_transactional.cpp  tests_transactional_map.cpp  tests_type_traits.cpp  tests_udp_sockets.cpp  tests_utils.cpp  udp_socket_impl.hpp
